# tenzor_test

./: CMakeLists.txt  bigxmlhandler.cpp  bigxmlhandler.h  fileconfigreader.cpp  fileconfigreader.h  iattr.h  iconfigreader.h  inode.h  main.cpp
handlers/: ihandler.h  linearhandler.cpp  linearhandler.h  threadhandler.cpp  threadhandler.h
